@@ -1,3 +1,8 @@
+2011-01-29  John W. Eaton  <jwe@octave.org>
+
+	* Makefile.am (__fltk_uigetfile__): Use the same compiler flags
+	as for __init_fltk__.
+
 2011-01-28  John W. Eaton  <jwe@octave.org>
 
 	* DLD-FUNCTIONS/eigs.cc (Feigs): Assume we have ARPACK.
